# bubble

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/desktop/: index.html  next.config.ts  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/app/: globals.css  layout.tsx  page.tsx
apps/desktop/src/: App.tsx  api.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: BubbleWorkspace.tsx
backend/: README.md  pyproject.toml
backend/bubble_agent/: __init__.py  config.py  main.py
backend/bubble_agent/agents/: __init__.py  graph.py  policies.py  state.py
backend/bubble_agent/api/: bubbles.py  dependencies.py  model_profiles.py  runs.py
backend/bubble_agent/artifacts/: __init__.py  renderers.py
backend/bubble_agent/domain/: __init__.py  schemas.py
backend/bubble_agent/models/: base.py  demo.py  factory.py  openai_compatible.py
backend/bubble_agent/persistence/: database.py  models.py  repositories.py
backend/bubble_agent/services/: orchestrator.py
backend/evals/: cases.json  latest_report.md  latest_results.json  run_evals.py
backend/tests/: conftest.py  test_api_workflow.py  test_policies.py  test_restart_recovery.py  test_security_and_events.py
docs/BubbleAgent/: INTERVIEW_GUIDE.md  PRD_BubbleAgent.md  PROJECT_BREAKDOWN.md
scripts/: build-sidecar.ps1  dev-backend.ps1  dev-frontend.ps1  generate-icon.ps1
