[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bubble-agent"
version = "0.1.0"
description = "Depth-aware local project planning agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "keyring>=25,<26",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-sqlite>=2.0,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "sse-starlette>=2.2,<4",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pyinstaller>=6,<7",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "respx>=0.22,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
bubble-agent = "bubble_agent.main:run"

[tool.hatch.build.targets.wheel]
packages = ["bubble_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
