[package]
name = "bubble-agent-desktop"
version = "0.1.0"
description = "Local-first depth-aware project planning agent"
authors = ["Bubble Agent contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
